--- a/public/js/manifest.json
+++ b/public/js/manifest.json
@@ -1,4 +1,4 @@
 {
-  "main.js": "bundle.2f5df75fba6aec899b3e.js",
-  "main.js.map": "bundle.2f5df75fba6aec899b3e.js.map"
+  "main.js": "/main.fb714b86aeee1662468f.js",
+  "vendors.js": "/vendors.f594bc9ef494a84fd2cf.js"
 }
