--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-textarea-autosize": "^8.3.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "whatwg-fetch": "^3.0.0"
@@ -29,10 +30,12 @@
     "@types/react-router-dom": "^5.3.0",
     "babel-loader": "^8.0.6",
     "bootstrap": "^5.1.1",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "react-hot-loader": "^4.12.10",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
+    "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.53.0",
@@ -40,6 +43,7 @@
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1",
+    "webpack-merge": "^5.8.0",
     "webpack-manifest-plugin": "^4.0.2"
   }
 }
