--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.php",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js --progress",
-    "build": "webpack --config webpack.prod.js --progress --env production"
+    "build": "webpack --config webpack.prod.js --progress --env production",
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "dependencies": {
+    "auto-changelog": "^2.4.0",
     "chums-ducks": "github:UtahGooner/chums-ducks",
     "classnames": "^2.2.6",
     "numeral": "^2.0.6",
@@ -43,7 +45,12 @@
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1",
-    "webpack-merge": "^5.8.0",
-    "webpack-manifest-plugin": "^4.0.2"
+    "webpack-manifest-plugin": "^4.0.2",
+    "webpack-merge": "^5.8.0"
+  },
+  "auto-changelog": {
+    "template": "keepachangelog",
+    "unreleased": true,
+    "commitLimit": false
   }
 }
