wip: Still in progress, multiple bugs and errors.

--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "dependencies": {
+    "@chumsinc/gtin-tools": "^1.0.3",
+    "@reduxjs/toolkit": "^1.9.2",
     "auto-changelog": "^2.4.0",
-    "chums-ducks": "github:UtahGooner/chums-ducks",
+    "chums-components": "github:UtahGooner/chums-components",
+    "chums-types": "github:UtahGooner/chums-types",
     "classnames": "^2.2.6",
     "numeral": "^2.0.6",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.0",
     "react-textarea-autosize": "^8.3.3",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "^3.0.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -28,14 +29,14 @@
     "@babel/plugin-proposal-function-bind": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^9.1.2",
     "bootstrap": "^5.1.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
-    "react-hot-loader": "^4.12.10",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.6",
@@ -43,9 +44,9 @@
     "webpack": "^5.53.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-chunk-hash": "^0.6.0",
-    "webpack-cli": "^4.8.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.2.1",
-    "webpack-manifest-plugin": "^4.0.2",
+    "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.8.0"
   },
   "auto-changelog": {
